# crewai_demo

./: README.md  pyproject.toml
crewai_demo/: main.py
